tdf#129701 Follow-up of previous change

According to comments in https://gerrit.libreoffice.org/c/core/+/163536
Follow-up of previous change

Change-Id: Icd7b6798d6ef35ca9574125cd3d4c4d89044569c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166133
Tested-by: Jenkins
Reviewed-by: Eike Rathke <erack@redhat.com>